--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
   "dependencies": {
     "@babel/runtime": "^7.8.7",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "dat-sdk": "^1.0.3",
     "debug": "~2.6.9",
+    "ejs": "^3.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "ipfs": "^0.41.2",
+    "isomorphic-git": "^1.3.1",
     "it-all": "^1.0.1",
+    "libp2p-crypto": "latest",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "node-rsa": "^1.0.8",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pug": "^2.0.4",
     "pull-stream": "^3.6.14",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "simple-oauth2": "^3.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
