--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "node-rsa": "^1.0.8",
+    "orbit-db": "^0.23.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pug": "^2.0.4",
@@ -35,6 +36,7 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/register": "^7.8.6",
+    "bcrypt": "^4.0.1",
     "cids": "latest",
     "delay": "latest",
     "hyperdrive-multiwriter": "^1.1.1",
