--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ipfs": "^0.41.2",
     "isomorphic-git": "^1.3.1",
     "it-all": "^1.0.1",
+    "js-ipfs-swarm-key-gen": "^1.0.1",
     "libp2p-crypto": "latest",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
