--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@babel/runtime": "^7.8.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "dat-sdk": "^1.0.3",
     "debug": "~2.6.9",
     "ejs": "^3.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "ipfs": "^0.41.2",
+    "ipfs": "^0.43.1",
     "isomorphic-git": "^1.3.1",
     "it-all": "^1.0.1",
     "js-ipfs-swarm-key-gen": "^1.0.1",
@@ -24,12 +23,9 @@
     "morgan": "~1.9.1",
     "node-rsa": "^1.0.8",
     "orbit-db": "^0.23.1",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
     "pug": "^2.0.4",
     "pull-stream": "^3.6.14",
-    "readline-sync": "^1.4.10",
-    "simple-oauth2": "^3.4.0"
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -44,7 +40,7 @@
     "hyperdrive-multiwriter": "^1.1.1",
     "ipfs-http-client": "^42.0.0",
     "jest": "^25.1.0",
-    "libp2p": "^0.27.3",
+    "libp2p": "^0.27.7",
     "peer-info": "^0.17.5",
     "supertest": "^4.0.2"
   },
