--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "orbit-db": "^0.23.1",
     "pug": "^2.0.4",
     "pull-stream": "^3.6.14",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "streaming-iterables": "^4.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -39,9 +40,11 @@
     "express-session": "^1.17.1",
     "hyperdrive-multiwriter": "^1.1.1",
     "ipfs-http-client": "^42.0.0",
+    "it-pipe": "^1.1.0",
     "jest": "^25.1.0",
     "libp2p": "^0.27.7",
     "peer-info": "^0.17.5",
+    "stream-to-it": "^0.2.0",
     "supertest": "^4.0.2"
   },
   "jest": {
