--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "git-extension-module"]
 	path = git-extension-module
 	url = https://gitlab.au.dk/thesis-project/git-extension-module.git
+[submodule "git-bug-extension-module"]
+	path = git-bug-extension-module
+	url = https://gitlab.au.dk/au614698/git-bug-extension-module.git
