attempt to fix the "WARNING! Head hash didn't match the contents" when replicating remote orbit db

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ipfs-http-client": "^42.0.0",
     "it-pipe": "^1.1.0",
     "jest": "^25.1.0",
+    "json-stable-stringify": "^1.0.1",
     "libp2p": "^0.27.7",
     "ncp": "^2.0.0",
     "peer-info": "^0.17.5",
