--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^25.1.0",
     "json-stable-stringify": "^1.0.1",
     "libp2p": "^0.27.7",
+    "lodash.clonedeep": "^4.5.0",
     "ncp": "^2.0.0",
     "peer-info": "^0.17.5",
     "public-ip": "^4.0.1",
